[package]
name = "skeleton"
version = "0.1.0"
authors = ["yyklll <naijimacn90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
clap = "2.33.0"
structopt = "0.2.15"
rayon = "1.2.0"
log = "0.4.6"
env_logger = "0.6.1"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
tokio = "1.8.4"
tokio-serde-json = "0.2.0"
num_cpus = "1.10.1"
config = "0.9.3"
